# mlproject

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  pyproject.toml  requirements-dev.txt
.devcontainer/: devcontainer.json
notebooks/: 0.0-sample-notebook.ipynb
reports/: 0.0-sample-notebook.md
tests/: test_test.py
